RESOLVED FIXED138597
Fix possible crash when closing the web inspector
https://bugs.webkit.org/show_bug.cgi?id=138597
Summary Fix possible crash when closing the web inspector
Simon Fraser (smfr)
Reported 2014-11-10 21:21:52 PST
Fix possible crash when closing the web inspector
Attachments
Patch (1.56 KB, patch)
2014-11-10 21:25 PST, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2014-11-10 21:25:57 PST
Andreas Kling
Comment 2 2014-11-10 21:28:19 PST
Comment on attachment 241330 [details] Patch Speculative r=me
WebKit Commit Bot
Comment 3 2014-11-10 22:11:51 PST
Comment on attachment 241330 [details] Patch Clearing flags on attachment: 241330 Committed r175851: <http://trac.webkit.org/changeset/175851>
WebKit Commit Bot
Comment 4 2014-11-10 22:11:55 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.